--- a/Pipfile
+++ b/Pipfile
@@ -12,7 +12,8 @@ flask-sqlalchemy = "*"
 alembic = "*"
 
 [dev-packages]
-black = "*"
+pytest = "*"
+flake8 = "*"
 
 [requires]
 python_version = "3.8"
