--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -24,7 +24,6 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pipenv black flake8 pytest
-        pipenv shell
         pipenv install
     - name: Lint with flake8
       run: |
@@ -35,4 +34,4 @@ jobs:
         black . -l 120 --check
     - name: Test with pytest
       run: |
-        pytest
+        pipenv run pytest
