--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -18,6 +18,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: Set up Python 3.8
       uses: actions/setup-python@v2
+      env:
+        PYTHONPATH: .
       with:
         python-version: 3.8
     - name: Install dependencies
