--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -18,8 +18,6 @@ jobs:
     - uses: actions/checkout@v2
     - name: Set up Python 3.8
       uses: actions/setup-python@v2
-      env:
-        PYTHONPATH: .
       with:
         python-version: 3.8
     - name: Install dependencies
@@ -27,7 +25,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install pipenv black flake8 pytest
         pipenv install
-    - name: Lint with flake8
+    - name: Linting flake8 + black
       run: |
         # stop the build if there are Python syntax errors or undefined names
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
@@ -36,4 +34,4 @@ jobs:
         black . -l 120 --check
     - name: Test with pytest
       run: |
-        pipenv run pytest
+        python -m pytest
