--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -34,4 +34,5 @@ jobs:
         black . -l 120 --check
     - name: Test with pytest
       run: |
-        python -m pytest
+        echo "::set-env name=PYTHONPATH::."
+        pipenv pytest
