--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -23,16 +23,15 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pipenv black flake8 pytest
-        pipenv install
+        pip install pipenv black
+        pipenv install --deploy --dev
     - name: Linting flake8 + black
       run: |
         # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        pipenv run flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=120 --statistics
+        pipenv run flake8 . --count --exit-zero --max-complexity=10 --max-line-length=120 --statistics
         black . -l 120 --check
     - name: Test with pytest
       run: |
-        echo "::set-env name=PYTHONPATH::home/runner/work/crude_backend_skeleton::."
-        pipenv run pytest
+        pipenv run python -m pytest
