--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,8 @@ alembic = "*"
 [dev-packages]
 pytest = "*"
 flake8 = "*"
+pytest-sugar = "*"
+pytest-cov = "*"
 
 [requires]
 python_version = "3.8"
